CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_fscl_agrmt_hist__x/sfrosit_t_provr_fscl_agrmt_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_provr_fiscal_agrement_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_provr_fiscal_agrement_hist</externalName>
    <label>Provider Fiscal Agreement History</label>
    <pluralLabel>Provider Fiscal Agreement History</pluralLabel>
</CustomObject>