CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_fscl_agrmt_hist__x/fields/cde_pmt_method__c.field-meta.xml
<CustomField>
    <fullName>cde_pmt_method__c</fullName>
    <description>cde_pmt_method</description>
    <externalDeveloperName>cde_pmt_method</externalDeveloperName>
    <label>Payment Method Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>