CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_fscl_agrmt_hist__x/fields/cde_type_agrmt__c.field-meta.xml
<CustomField>
    <fullName>cde_type_agrmt__c</fullName>
    <description>cde_type_agrmt</description>
    <externalDeveloperName>cde_type_agrmt</externalDeveloperName>
    <label>Agreement Type Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>