CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_fscl_agrmt_hist__x/fields/cde_type_status__c.field-meta.xml
<CustomField>
    <fullName>cde_type_status__c</fullName>
    <description>cde_type_status</description>
    <externalDeveloperName>cde_type_status</externalDeveloperName>
    <label>Status Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>