CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_fscl_agrmt_hist__x/fields/dte_begin_agrmt__c.field-meta.xml
<CustomField>
    <fullName>dte_begin_agrmt__c</fullName>
    <description>dte_begin_agrmt</description>
    <externalDeveloperName>dte_begin_agrmt</externalDeveloperName>
    <label>Begin Agreement Date</label>
    <type>Date</type>
</CustomField>