CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_fscl_agrmt_hist__x/fields/dte_cntrct_agrmt__c.field-meta.xml
<CustomField>
    <fullName>dte_cntrct_agrmt__c</fullName>
    <description>dte_cntrct_agrmt</description>
    <externalDeveloperName>dte_cntrct_agrmt</externalDeveloperName>
    <label>Contract Agreement Date</label>
    <type>Date</type>
</CustomField>