CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_fscl_agrmt_hist__x/fields/dte_effv_agrmt_fiscal__c.field-meta.xml
<CustomField>
    <fullName>dte_effv_agrmt_fiscal__c</fullName>
    <description>dte_effv_agrmt_fiscal</description>
    <externalDeveloperName>dte_effv_agrmt_fiscal</externalDeveloperName>
    <label>Fiscal Agreement Effective Date</label>
    <type>Date</type>
</CustomField>