CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_fscl_agrmt_hist__x/fields/dte_end_agrmt__c.field-meta.xml
<CustomField>
    <fullName>dte_end_agrmt__c</fullName>
    <description>dte_end_agrmt</description>
    <externalDeveloperName>dte_end_agrmt</externalDeveloperName>
    <label>Agreement end date</label>
    <type>Date</type>
</CustomField>