CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_fscl_agrmt_hist__x/fields/dte_sent_agrmt_fiscal__c.field-meta.xml
<CustomField>
    <fullName>dte_sent_agrmt_fiscal__c</fullName>
    <description>dte_sent_agrmt_fiscal</description>
    <externalDeveloperName>dte_sent_agrmt_fiscal</externalDeveloperName>
    <label>Fiscal Agreement Sent date</label>
    <type>Date</type>
</CustomField>