CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_fscl_agrmt_hist__x/fields/idn_agrmt_fiscal__c.field-meta.xml
<CustomField>
    <fullName>idn_agrmt_fiscal__c</fullName>
    <description>idn_agrmt_fiscal</description>
    <externalDeveloperName>idn_agrmt_fiscal</externalDeveloperName>
    <label>Fiscal Agreement Id</label>
    <length>50</length>
    <referenceTargetField>T_PROVR_FISCAL_AGREMENT__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_PROVR_FISCAL_AGREMENT__c</referenceTo>
    <relationshipLabel>Provider Fiscal Agreement Legacy History</relationshipLabel>
    <relationshipName>t_provr_fiscal_agrement_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>