CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_fscl_agrmt_hist__x/fields/idn_agrmt_fiscal_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_agrmt_fiscal_hist__c</fullName>
    <description>idn_agrmt_fiscal_hist</description>
    <externalDeveloperName>idn_agrmt_fiscal_hist</externalDeveloperName>
    <label>Fiscal Agreement Hist Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>