CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_fscl_agrmt_hist__x/fields/txt_cmt__c.field-meta.xml
<CustomField>
    <fullName>txt_cmt__c</fullName>
    <description>txt_cmt</description>
    <externalDeveloperName>txt_cmt</externalDeveloperName>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>